// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/ltcs-provision-reports/_officeId/_userId/_providedIn/index.vue delete ltcsProvisionReport button should be rendered when reportData.status is LtcsProvisionReport.fixed 1`] = `
<a
  class="v-btn-stub"
  color="danger"
  data-delete-ltcs-provision-report-button=""
  text=""
>
  <v-icon-stub
    left=""
  >
    M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z
  </v-icon-stub>
            削除
</a>
`;

exports[`pages/ltcs-provision-reports/_officeId/_userId/_providedIn/index.vue delete ltcsProvisionReport button should be rendered when reportData.status is LtcsProvisionReport.inProgress 1`] = `
<a
  class="v-btn-stub"
  color="danger"
  data-delete-ltcs-provision-report-button=""
  text=""
>
  <v-icon-stub
    left=""
  >
    M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z
  </v-icon-stub>
            削除
</a>
`;

exports[`pages/ltcs-provision-reports/_officeId/_userId/_providedIn/index.vue initial view should be rendered correctly 1`] = `
<div
  breadcrumbs="[object Object],[object Object]"
  class="z-page-stub"
  data-page-ltcs-provision-report=""
>
  <div
    class="z-page-stub-slot-tabs"
  />
  <div
    class="z-page-stub-slot-title"
  />
  <v-row-stub
    class="align-stretch"
    tag="div"
  >
    <v-col-stub
      class="align-stretch d-flex py-0"
      cols="12"
      sm="6"
      tag="div"
    >
      <div
        class="z-data-card-stub"
        title="基本情報"
      >
        <div
          class="z-data-card-stub-slot-actions"
        />
        <z-data-card-item-stub
          data-office-abbr=""
          dataofficeabbr=""
          icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
          label="事業所"
        >
          <a>
            新潟
          </a>
        </z-data-card-item-stub>
        <z-data-card-item-stub
          icon="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M12 20C7.59 20 4 16.41 4 12S7.59 4 12 4 20 7.59 20 12 16.41 20 12 20M16.59 7.58L10 14.17L7.41 11.59L6 13L10 17L18 9L16.59 7.58Z"
          label="状態"
          value="確定済（1996年04月20日 00:00）"
        />
        <v-card-actions-stub
          tag="div"
        >
          <v-spacer-stub
            tag="div"
          />
          <a
            class="v-btn-stub"
            color="primary"
            data-download-sheet=""
            text=""
          >
            <v-icon-stub
              left=""
            >
              M5,20H19V18H5M19,9H15V3H9V9H5L12,16L19,9Z
            </v-icon-stub>
            サービス提供票をダウンロード
          </a>
        </v-card-actions-stub>
        <div
          class="z-data-card-stub-slot-header"
        />
      </div>
    </v-col-stub>
    <v-col-stub
      class="py-0"
      cols="12"
      sm="6"
      tag="div"
    >
      <z-user-card-stub
        user="[object Object]"
      />
    </v-col-stub>
  </v-row-stub>
  <div
    class="z-data-card-stub"
    title="予定・実績"
  >
    <div
      class="z-data-card-stub-slot-actions"
    />
    <v-container-stub
      tag="div"
    >
      <v-row-stub
        class="pb-4"
        nogutters="true"
        tag="div"
      >
        <v-col-stub
          class="mt-3 mt-md-0"
          cols="12"
          md="4"
          order="2"
          ordermd="0"
          tag="div"
        >
          <a
            class="v-btn-stub"
            color="primary"
            data-add-service=""
            depressed=""
            disabled="disabled"
          >
            <v-icon-stub
              left=""
            >
              M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z
            </v-icon-stub>
              サービス情報を追加
          </a>
        </v-col-stub>
        <v-col-stub
          cols="12"
          md="4"
          sm="6"
          tag="div"
        >
          <z-flex-stub
            cols="12"
          >
            <a
              class="v-btn-stub"
              color="primary"
              data-prev-month=""
              text=""
            >
              前月
            </a>
            <z-date-field-stub
              class="flex-grow-1"
              errormessages=""
              hide-details=""
              label="サービス提供年月"
              max="2018-08"
              type="month"
              usejapaneseera="true"
              value="2021-02"
            />
            <a
              class="v-btn-stub"
              color="primary"
              data-next-month=""
              text=""
            >
              次月
            </a>
          </z-flex-stub>
        </v-col-stub>
        <v-col-stub
          class="mt-6 mt-sm-0"
          cols="12"
          md="4"
          sm="6"
          tag="div"
        >
          <z-flex-stub
            cols="12"
          >
            <a
              class="v-btn-stub"
              color="primary"
              data-prev-user=""
              text=""
            >
              前へ
            </a>
            <z-select-stub
              appendicon="$dropdown"
              backgroundcolor="#f1f6fa"
              class="ma-0"
              clearicon="$clear"
              dense="true"
              errorcount="1"
              errormessages=""
              hidedetails="true"
              itemcolor="primary"
              itemdisabled="disabled"
              items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
              itemtext="text"
              itemvalue="value"
              label="利用者"
              loaderheight="2"
              menuprops="[object Object]"
              messages=""
              nodatatext="$vuetify.noDataText"
              outlined="true"
              rules=""
              successmessages=""
              type="text"
              value="20"
              valuecomparator="[Function]"
            />
            <a
              class="v-btn-stub"
              color="primary"
              data-next-user=""
              text=""
            >
              次へ
            </a>
          </z-flex-stub>
        </v-col-stub>
      </v-row-stub>
      <v-row-stub
        nogutters="true"
        tag="div"
      >
        <v-col-stub
          cols="12"
          tag="div"
        >
          <z-overflow-shadow-stub>
            <v-simple-table-stub
              class="entryTable"
              dense="true"
            />
          </z-overflow-shadow-stub>
        </v-col-stub>
      </v-row-stub>
      <!---->
      <validation-observer-stub
        tag="div"
        vid="obs_0"
      />
      <v-row-stub
        class="pt-4"
        dense="true"
        justify="end"
        tag="div"
      >
        <v-col-stub
          class="d-flex justify-center"
          cols="12"
          md="3"
          sm="6"
          tag="div"
        >
          <a
            block=""
            class="v-btn-stub"
            color="primary"
            data-copy-plans=""
            disabled="disabled"
          >
            <v-icon-stub
              left=""
            >
              M2,2H16V16H2V2M22,8V22H8V18H18V8H22M4,4V14H14V4H4Z
            </v-icon-stub>
            前月から予定をコピー
          </a>
        </v-col-stub>
        <v-col-stub
          class="d-flex justify-center mt-2 mt-sm-0"
          cols="12"
          md="3"
          sm="6"
          tag="div"
        >
          <a
            block=""
            class="v-btn-stub"
            color="accent"
            data-save=""
            disabled="disabled"
          >
            <v-icon-stub
              left=""
            >
              M14,13V17H10V13H7L12,8L17,13M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z
            </v-icon-stub>
            保存
          </a>
        </v-col-stub>
        <v-col-stub
          class="d-flex justify-center mt-2 mt-sm-0"
          cols="12"
          md="3"
          sm="6"
          tag="div"
        >
          <a
            class="flex-grow-1 flex-shrink-1 v-btn-stub"
            color="accent"
            data-remand=""
          >
            <v-icon-stub
              left=""
            >
              M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z
            </v-icon-stub>
            予実を作成中にする
          </a>
        </v-col-stub>
        <v-col-stub
          class="d-flex mt-2 mt-md-0"
          cols="12"
          md="3"
          ordermd="first"
          tag="div"
        >
          <a
            class="v-btn-stub"
            color="danger"
            data-delete-ltcs-provision-report-button=""
            text=""
          >
            <v-icon-stub
              left=""
            >
              M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z
            </v-icon-stub>
            削除
          </a>
        </v-col-stub>
      </v-row-stub>
    </v-container-stub>
    <div
      class="z-data-card-stub-slot-header"
    />
  </div>
  <z-ltcs-provision-report-entry-browsing-dialog-stub
    iseffectiveon="2021-02"
    officeid="10"
    width="75%"
  />
  <z-date-confirm-dialog-stub
    data-date-confirm-dialog="download"
    message="印字する作成日を選択してください"
    positivelabel="ダウンロード"
  />
  <z-prompt-dialog-stub
    options="[object Object]"
  />
  <z-progress-stub
    message="処理中です。しばらくお待ちください。"
    opacity="0.8"
    zindex="7"
  />
</div>
`;

exports[`pages/ltcs-provision-reports/_officeId/_userId/_providedIn/index.vue initial view should not be able to edit if it is already fixed 1`] = `
<div
  breadcrumbs="[object Object],[object Object]"
  class="z-page-stub"
  data-page-ltcs-provision-report=""
>
  <div
    class="z-page-stub-slot-tabs"
  />
  <div
    class="z-page-stub-slot-title"
  />
  <v-row-stub
    class="align-stretch"
    tag="div"
  >
    <v-col-stub
      class="align-stretch d-flex py-0"
      cols="12"
      sm="6"
      tag="div"
    >
      <div
        class="z-data-card-stub"
        title="基本情報"
      >
        <div
          class="z-data-card-stub-slot-actions"
        />
        <z-data-card-item-stub
          data-office-abbr=""
          dataofficeabbr=""
          icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
          label="事業所"
        >
          <a>
            新潟
          </a>
        </z-data-card-item-stub>
        <z-data-card-item-stub
          icon="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M12 20C7.59 20 4 16.41 4 12S7.59 4 12 4 20 7.59 20 12 16.41 20 12 20M16.59 7.58L10 14.17L7.41 11.59L6 13L10 17L18 9L16.59 7.58Z"
          label="状態"
          value="確定済（1996年04月20日 00:00）"
        />
        <v-card-actions-stub
          tag="div"
        >
          <v-spacer-stub
            tag="div"
          />
          <a
            class="v-btn-stub"
            color="primary"
            data-download-sheet=""
            text=""
          >
            <v-icon-stub
              left=""
            >
              M5,20H19V18H5M19,9H15V3H9V9H5L12,16L19,9Z
            </v-icon-stub>
            サービス提供票をダウンロード
          </a>
        </v-card-actions-stub>
        <div
          class="z-data-card-stub-slot-header"
        />
      </div>
    </v-col-stub>
    <v-col-stub
      class="py-0"
      cols="12"
      sm="6"
      tag="div"
    >
      <z-user-card-stub
        user="[object Object]"
      />
    </v-col-stub>
  </v-row-stub>
  <div
    class="z-data-card-stub"
    title="予定・実績"
  >
    <div
      class="z-data-card-stub-slot-actions"
    />
    <v-container-stub
      tag="div"
    >
      <v-row-stub
        class="pb-4"
        nogutters="true"
        tag="div"
      >
        <v-col-stub
          class="mt-3 mt-md-0"
          cols="12"
          md="4"
          order="2"
          ordermd="0"
          tag="div"
        >
          <a
            class="v-btn-stub"
            color="primary"
            data-add-service=""
            depressed=""
            disabled="disabled"
          >
            <v-icon-stub
              left=""
            >
              M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z
            </v-icon-stub>
              サービス情報を追加
          </a>
        </v-col-stub>
        <v-col-stub
          cols="12"
          md="4"
          sm="6"
          tag="div"
        >
          <z-flex-stub
            cols="12"
          >
            <a
              class="v-btn-stub"
              color="primary"
              data-prev-month=""
              text=""
            >
              前月
            </a>
            <div
              class="flex-grow-1 z-date-field"
              hide-details=""
              max="2018-08"
            >
              <div
                class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                    style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                  >
                    <fieldset
                      aria-hidden="true"
                    >
                      <legend
                        style="width: 0px;"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                    <div
                      class="v-text-field__slot"
                    >
                      <label
                        class="v-label v-label--active theme--light"
                        style="left: 0px; position: absolute;"
                      >
                        サービス提供年月
                      </label>
                      <input
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <v-dialog-stub
                closedelay="0"
                contentclass=""
                data-z-date-field-dialog=""
                opendelay="0"
                origin="center center"
                retainfocus="true"
                transition="dialog-transition"
                width="290px"
              >
                <v-date-picker-stub
                  data-z-date-field-picker=""
                  dayformat="[Function]"
                  eventcolor="warning"
                  firstdayofweek="1"
                  headerdateformat="[Function]"
                  locale="ja-JP"
                  localefirstdayofyear="0"
                  max="2018-08"
                  min="1920-01-01"
                  nexticon="$next"
                  nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
                  nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
                  notitle="true"
                  previcon="$prev"
                  prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
                  prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
                  selecteditemstext="$vuetify.datePicker.itemsSelected"
                  showcurrent="true"
                  titledateformat="[Function]"
                  type="month"
                  value="2021-02-01"
                  width="290"
                  yearformat="[Function]"
                >
                  <v-spacer-stub
                    tag="div"
                  />
                  <!---->
                  <a
                    class="v-btn-stub"
                    color="primary"
                    data-z-date-field-button-cancel=""
                    text=""
                  >
                    キャンセル
                  </a>
                </v-date-picker-stub>
              </v-dialog-stub>
            </div>
            <a
              class="v-btn-stub"
              color="primary"
              data-next-month=""
              text=""
            >
              次月
            </a>
          </z-flex-stub>
        </v-col-stub>
        <v-col-stub
          class="mt-6 mt-sm-0"
          cols="12"
          md="4"
          sm="6"
          tag="div"
        >
          <z-flex-stub
            cols="12"
          >
            <a
              class="v-btn-stub"
              color="primary"
              data-prev-user=""
              text=""
            >
              前へ
            </a>
            <div
              class="v-input ma-0 v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
            >
              <div
                class="v-input__control"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="v-input__slot"
                  role="button"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-select__slot"
                  >
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      利用者
                    </label>
                    <div
                      class="v-select__selections"
                    >
                      <input
                        aria-readonly="false"
                        autocomplete="off"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate mdi mdi-menu-down theme--light"
                        />
                      </div>
                    </div>
                    <input
                      type="hidden"
                      value="20"
                    />
                  </div>
                  <div
                    class="v-menu"
                  >
                    <!---->
                  </div>
                </div>
              </div>
            </div>
            <a
              class="v-btn-stub"
              color="primary"
              data-next-user=""
              text=""
            >
              次へ
            </a>
          </z-flex-stub>
        </v-col-stub>
      </v-row-stub>
      <v-row-stub
        nogutters="true"
        tag="div"
      >
        <v-col-stub
          cols="12"
          tag="div"
        >
          <z-overflow-shadow-stub>
            <div
              class="v-data-table v-data-table--dense theme--light entryTable"
            >
              <div
                class="v-data-table__wrapper"
              >
                <table>
                  <thead>
                    <tr>
                      <th
                        class="text-center"
                      >
                        <z-flex-stub
                          class="justify-center"
                        >
                          <div
                            class="v-simple-checkbox v-simple-checkbox--disabled"
                          >
                            <div
                              class="v-input--selection-controls__input"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate v-icon--disabled mdi mdi-checkbox-blank-outline theme--light"
                              />
                            </div>
                          </div>
                        </z-flex-stub>
                      </th>
                      <th
                        class="text-start"
                        style="min-width: 200px;"
                      >
                        <div>
                          提供時間
                        </div>
                        <div>
                          サービス内容
                        </div>
                      </th>
                      <th
                        style="min-width: 60px;"
                      />
                      <th
                        class="text-center"
                      >
                        <div>
                          1
                        </div>
                        <div>
                          月
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          2
                        </div>
                        <div>
                          火
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          3
                        </div>
                        <div>
                          水
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          4
                        </div>
                        <div>
                          木
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          5
                        </div>
                        <div>
                          金
                        </div>
                      </th>
                      <th
                        class="text-center sat"
                      >
                        <div>
                          6
                        </div>
                        <div>
                          土
                        </div>
                      </th>
                      <th
                        class="text-center sun"
                      >
                        <div>
                          7
                        </div>
                        <div>
                          日
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          8
                        </div>
                        <div>
                          月
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          9
                        </div>
                        <div>
                          火
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          10
                        </div>
                        <div>
                          水
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          11
                        </div>
                        <div>
                          木
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          12
                        </div>
                        <div>
                          金
                        </div>
                      </th>
                      <th
                        class="text-center sat"
                      >
                        <div>
                          13
                        </div>
                        <div>
                          土
                        </div>
                      </th>
                      <th
                        class="text-center sun"
                      >
                        <div>
                          14
                        </div>
                        <div>
                          日
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          15
                        </div>
                        <div>
                          月
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          16
                        </div>
                        <div>
                          火
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          17
                        </div>
                        <div>
                          水
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          18
                        </div>
                        <div>
                          木
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          19
                        </div>
                        <div>
                          金
                        </div>
                      </th>
                      <th
                        class="text-center sat"
                      >
                        <div>
                          20
                        </div>
                        <div>
                          土
                        </div>
                      </th>
                      <th
                        class="text-center sun"
                      >
                        <div>
                          21
                        </div>
                        <div>
                          日
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          22
                        </div>
                        <div>
                          月
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          23
                        </div>
                        <div>
                          火
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          24
                        </div>
                        <div>
                          水
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          25
                        </div>
                        <div>
                          木
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        <div>
                          26
                        </div>
                        <div>
                          金
                        </div>
                      </th>
                      <th
                        class="text-center sat"
                      >
                        <div>
                          27
                        </div>
                        <div>
                          土
                        </div>
                      </th>
                      <th
                        class="text-center sun"
                      >
                        <div>
                          28
                        </div>
                        <div>
                          日
                        </div>
                      </th>
                      <th
                        class="text-center"
                      >
                        計
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        class="text-center"
                        rowspan="2"
                      >
                        <div
                          class="v-simple-checkbox v-simple-checkbox--disabled"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate v-icon--disabled mdi mdi-checkbox-blank-outline theme--light"
                            />
                          </div>
                        </div>
                      </td>
                      <td
                        class="text-start clickable"
                        rowspan="2"
                      >
                        <div>
                          22:01 〜 23:01
                        </div>
                        <div
                          class="mt-1"
                        >
                          <z-promised-stub
                            data-service-code="113251"
                            promise="[object Promise]"
                            tag="span"
                          />
                          <!---->
                        </div>
                      </td>
                      <td
                        class="text-center not-clickable"
                      >
                        予定
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center sat"
                      >
                        1
                      </td>
                      <td
                        class="text-center sun"
                      >
                        1
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                        1
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center sat"
                      >
                      </td>
                      <td
                        class="text-center sun"
                      >
                        1
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                        1
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                        1
                      </td>
                      <td
                        class="text-center sat"
                      >
                      </td>
                      <td
                        class="text-center sun"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                        1
                      </td>
                      <td
                        class="text-center"
                      >
                        1
                      </td>
                      <td
                        class="text-center"
                      >
                        1
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center sat"
                      >
                      </td>
                      <td
                        class="text-center sun"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                        9
                      </td>
                    </tr>
                    <tr
                      class="result"
                    >
                      <td
                        class="text-center"
                      >
                        実績
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                        1
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center sat"
                      >
                        1
                      </td>
                      <td
                        class="text-center sun"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                        1
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center sat"
                      >
                        1
                      </td>
                      <td
                        class="text-center sun"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                        1
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                        1
                      </td>
                      <td
                        class="text-center sat"
                      >
                        1
                      </td>
                      <td
                        class="text-center sun"
                      >
                        1
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                      </td>
                      <td
                        class="text-center sat"
                      >
                      </td>
                      <td
                        class="text-center sun"
                      >
                      </td>
                      <td
                        class="text-center"
                      >
                        8
                      </td>
                    </tr>
                    <tr
                      class="dummy"
                    />
                  </tbody>
                </table>
              </div>
            </div>
          </z-overflow-shadow-stub>
        </v-col-stub>
      </v-row-stub>
      <!---->
      <div>
        <!---->
        <v-row-stub
          class="pt-4"
          dense="true"
          justify="end"
          tag="div"
        >
          <v-col-stub
            cols="12"
            sm="6"
            tag="div"
          >
            <v-row-stub
              class="ma-0"
              tag="div"
            >
              <div
                class="v-data-table v-data-table--dense theme--light additionTable"
                data-addition-table=""
              >
                <div
                  class="v-data-table__wrapper"
                >
                  <table>
                    <tbody>
                      <tr>
                        <th
                          class="text-right text--secondary key"
                        >
                          特定事業所加算
                        </th>
                        <td
                          class="value"
                        >
                          <span>
                            なし
                          </span>
                        </td>
                      </tr>
                      <tr>
                        <th
                          class="text-right text--secondary key"
                        >
                          処遇改善加算
                        </th>
                        <td
                          class="value"
                        >
                          <span>
                            なし
                          </span>
                        </td>
                      </tr>
                      <tr>
                        <th
                          class="text-right text--secondary key"
                        >
                          特定処遇改善加算
                        </th>
                        <td
                          class="value"
                        >
                          <span>
                            なし
                          </span>
                        </td>
                      </tr>
                      <tr>
                        <th
                          class="text-right text--secondary key"
                        >
                          ベースアップ等支援加算
                        </th>
                        <td
                          class="value"
                        >
                          <span>
                            なし
                          </span>
                        </td>
                      </tr>
                      <tr>
                        <th
                          class="text-right text--secondary key"
                        >
                          地域加算
                        </th>
                        <td
                          class="value"
                        >
                          <span>
                            なし
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </v-row-stub>
            <v-row-stub
              class="ma-0 pt-2"
              dense="true"
              tag="div"
            >
              <div
                class="d-flex justify-end updateAdditionsButtonWrapper"
              >
                <a
                  class="v-btn-stub"
                  color="primary"
                  data-update-additions-button=""
                  disabled="disabled"
                  text=""
                >
                  <v-icon-stub
                    left=""
                  >
                    M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z
                  </v-icon-stub>
                  加算情報を更新する
                </a>
              </div>
            </v-row-stub>
          </v-col-stub>
          <v-col-stub
            class="d-flex justify-sm-end"
            cols="12"
            sm="6"
            tag="div"
          >
            <div
              class="v-data-table v-data-table--dense theme--light summaryTable"
            >
              <div
                class="v-data-table__wrapper"
              >
                <table>
                  <thead>
                    <tr>
                      <th />
                      <th
                        class="text-right"
                      >
                        予定
                      </th>
                      <th
                        class="text-right"
                      >
                        実績
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <th
                        class="text-right text--secondary key"
                      >
                        限度額管理対象単位数
                      </th>
                      <td
                        class="value"
                      >
                        <div
                          class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--is-loading v-input--dense v-input--hide-spin-buttons theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                              style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                            >
                              <fieldset
                                aria-hidden="true"
                              >
                                <legend
                                  style="width: 0px;"
                                >
                                  <span
                                    class="notranslate"
                                  >
                                    ​
                                  </span>
                                </legend>
                              </fieldset>
                              <div
                                class="v-text-field__slot"
                              >
                                <input
                                  disabled="disabled"
                                  type="text"
                                />
                              </div>
                              <div
                                aria-valuemax="100"
                                aria-valuemin="0"
                                class="v-progress-linear v-progress-linear--absolute v-progress-linear--visible theme--light"
                                role="progressbar"
                                style="height: 2px;"
                              >
                                <div
                                  class="v-progress-linear__background primary"
                                  style="opacity: 0.3; left: 0%; width: 100%;"
                                />
                                <div
                                  class="v-progress-linear__buffer"
                                />
                                <transition-stub
                                  name="fade-transition"
                                >
                                  <div
                                    class="v-progress-linear__indeterminate v-progress-linear__indeterminate--active"
                                  >
                                    <div
                                      class="v-progress-linear__indeterminate long primary"
                                    />
                                    <div
                                      class="v-progress-linear__indeterminate short primary"
                                    />
                                  </div>
                                </transition-stub>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                      <td
                        class="value"
                      >
                        <div
                          class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--is-loading v-input--dense v-input--hide-spin-buttons theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                              style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                            >
                              <fieldset
                                aria-hidden="true"
                              >
                                <legend
                                  style="width: 0px;"
                                >
                                  <span
                                    class="notranslate"
                                  >
                                    ​
                                  </span>
                                </legend>
                              </fieldset>
                              <div
                                class="v-text-field__slot"
                              >
                                <input
                                  disabled="disabled"
                                  type="text"
                                />
                              </div>
                              <div
                                aria-valuemax="100"
                                aria-valuemin="0"
                                class="v-progress-linear v-progress-linear--absolute v-progress-linear--visible theme--light"
                                role="progressbar"
                                style="height: 2px;"
                              >
                                <div
                                  class="v-progress-linear__background primary"
                                  style="opacity: 0.3; left: 0%; width: 100%;"
                                />
                                <div
                                  class="v-progress-linear__buffer"
                                />
                                <transition-stub
                                  name="fade-transition"
                                >
                                  <div
                                    class="v-progress-linear__indeterminate v-progress-linear__indeterminate--active"
                                  >
                                    <div
                                      class="v-progress-linear__indeterminate long primary"
                                    />
                                    <div
                                      class="v-progress-linear__indeterminate short primary"
                                    />
                                  </div>
                                </transition-stub>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <th
                        class="text-right text--secondary key"
                      >
                        種類支給限度基準を超える単位数
                      </th>
                      <td
                        class="value"
                      >
                        <div
                          data-plan-max-benefit-quota-excess-score=""
                        >
                          <div
                            class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--dense v-input--hide-spin-buttons theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                          >
                            <div
                              class="v-input__control"
                            >
                              <div
                                class="v-input__slot"
                                style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                              >
                                <fieldset
                                  aria-hidden="true"
                                >
                                  <legend
                                    style="width: 0px;"
                                  >
                                    <span
                                      class="notranslate"
                                    >
                                      ​
                                    </span>
                                  </legend>
                                </fieldset>
                                <div
                                  class="v-text-field__slot"
                                >
                                  <input
                                    disabled="disabled"
                                    type="number"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                      <td
                        class="value"
                      >
                        <div
                          data-result-max-benefit-quota-excess-score=""
                        >
                          <div
                            class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--dense v-input--hide-spin-buttons theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                          >
                            <div
                              class="v-input__control"
                            >
                              <div
                                class="v-input__slot"
                                style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                              >
                                <fieldset
                                  aria-hidden="true"
                                >
                                  <legend
                                    style="width: 0px;"
                                  >
                                    <span
                                      class="notranslate"
                                    >
                                      ​
                                    </span>
                                  </legend>
                                </fieldset>
                                <div
                                  class="v-text-field__slot"
                                >
                                  <input
                                    disabled="disabled"
                                    type="number"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <th
                        class="text-right text--secondary key"
                      >
                        種類支給限度基準内単位数
                      </th>
                      <td
                        class="value"
                      >
                        <div
                          class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--dense v-input--hide-spin-buttons theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                              style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                            >
                              <fieldset
                                aria-hidden="true"
                              >
                                <legend
                                  style="width: 0px;"
                                >
                                  <span
                                    class="notranslate"
                                  >
                                    ​
                                  </span>
                                </legend>
                              </fieldset>
                              <div
                                class="v-text-field__slot"
                              >
                                <input
                                  disabled="disabled"
                                  type="text"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                      <td
                        class="value"
                      >
                        <div
                          class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--dense v-input--hide-spin-buttons theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                              style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                            >
                              <fieldset
                                aria-hidden="true"
                              >
                                <legend
                                  style="width: 0px;"
                                >
                                  <span
                                    class="notranslate"
                                  >
                                    ​
                                  </span>
                                </legend>
                              </fieldset>
                              <div
                                class="v-text-field__slot"
                              >
                                <input
                                  disabled="disabled"
                                  type="text"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <th
                        class="text-right text--secondary key"
                      >
                        区分支給限度基準を超える単位数
                      </th>
                      <td
                        class="value"
                      >
                        <div
                          data-plan-max-benefit-excess-score=""
                        >
                          <div
                            class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--dense v-input--hide-spin-buttons theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                          >
                            <div
                              class="v-input__control"
                            >
                              <div
                                class="v-input__slot"
                                style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                              >
                                <fieldset
                                  aria-hidden="true"
                                >
                                  <legend
                                    style="width: 0px;"
                                  >
                                    <span
                                      class="notranslate"
                                    >
                                      ​
                                    </span>
                                  </legend>
                                </fieldset>
                                <div
                                  class="v-text-field__slot"
                                >
                                  <input
                                    disabled="disabled"
                                    type="number"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                      <td
                        class="value"
                      >
                        <div
                          data-result-max-benefit-excess-score=""
                        >
                          <div
                            class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--dense v-input--hide-spin-buttons theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                          >
                            <div
                              class="v-input__control"
                            >
                              <div
                                class="v-input__slot"
                                style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                              >
                                <fieldset
                                  aria-hidden="true"
                                >
                                  <legend
                                    style="width: 0px;"
                                  >
                                    <span
                                      class="notranslate"
                                    >
                                      ​
                                    </span>
                                  </legend>
                                </fieldset>
                                <div
                                  class="v-text-field__slot"
                                >
                                  <input
                                    disabled="disabled"
                                    type="number"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <th
                        class="text-right text--secondary key"
                      >
                        区分支給限度基準内単位数
                      </th>
                      <td
                        class="value"
                      >
                        <div
                          class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--dense v-input--hide-spin-buttons theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                              style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                            >
                              <fieldset
                                aria-hidden="true"
                              >
                                <legend
                                  style="width: 0px;"
                                >
                                  <span
                                    class="notranslate"
                                  >
                                    ​
                                  </span>
                                </legend>
                              </fieldset>
                              <div
                                class="v-text-field__slot"
                              >
                                <input
                                  disabled="disabled"
                                  type="text"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                      <td
                        class="value"
                      >
                        <div
                          class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--dense v-input--hide-spin-buttons theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                              style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                            >
                              <fieldset
                                aria-hidden="true"
                              >
                                <legend
                                  style="width: 0px;"
                                >
                                  <span
                                    class="notranslate"
                                  >
                                    ​
                                  </span>
                                </legend>
                              </fieldset>
                              <div
                                class="v-text-field__slot"
                              >
                                <input
                                  disabled="disabled"
                                  type="text"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <th
                        class="text-right text--secondary key"
                      >
                        給付単位数
                      </th>
                      <td
                        class="value"
                      >
                        <div
                          class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--is-loading v-input--dense v-input--hide-spin-buttons theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                              style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                            >
                              <fieldset
                                aria-hidden="true"
                              >
                                <legend
                                  style="width: 0px;"
                                >
                                  <span
                                    class="notranslate"
                                  >
                                    ​
                                  </span>
                                </legend>
                              </fieldset>
                              <div
                                class="v-text-field__slot"
                              >
                                <input
                                  disabled="disabled"
                                  type="text"
                                />
                              </div>
                              <div
                                aria-valuemax="100"
                                aria-valuemin="0"
                                class="v-progress-linear v-progress-linear--absolute v-progress-linear--visible theme--light"
                                role="progressbar"
                                style="height: 2px;"
                              >
                                <div
                                  class="v-progress-linear__background primary"
                                  style="opacity: 0.3; left: 0%; width: 100%;"
                                />
                                <div
                                  class="v-progress-linear__buffer"
                                />
                                <transition-stub
                                  name="fade-transition"
                                >
                                  <div
                                    class="v-progress-linear__indeterminate v-progress-linear__indeterminate--active"
                                  >
                                    <div
                                      class="v-progress-linear__indeterminate long primary"
                                    />
                                    <div
                                      class="v-progress-linear__indeterminate short primary"
                                    />
                                  </div>
                                </transition-stub>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                      <td
                        class="value"
                      >
                        <div
                          class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--is-loading v-input--dense v-input--hide-spin-buttons theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                        >
                          <div
                            class="v-input__control"
                          >
                            <div
                              class="v-input__slot"
                              style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                            >
                              <fieldset
                                aria-hidden="true"
                              >
                                <legend
                                  style="width: 0px;"
                                >
                                  <span
                                    class="notranslate"
                                  >
                                    ​
                                  </span>
                                </legend>
                              </fieldset>
                              <div
                                class="v-text-field__slot"
                              >
                                <input
                                  disabled="disabled"
                                  type="text"
                                />
                              </div>
                              <div
                                aria-valuemax="100"
                                aria-valuemin="0"
                                class="v-progress-linear v-progress-linear--absolute v-progress-linear--visible theme--light"
                                role="progressbar"
                                style="height: 2px;"
                              >
                                <div
                                  class="v-progress-linear__background primary"
                                  style="opacity: 0.3; left: 0%; width: 100%;"
                                />
                                <div
                                  class="v-progress-linear__buffer"
                                />
                                <transition-stub
                                  name="fade-transition"
                                >
                                  <div
                                    class="v-progress-linear__indeterminate v-progress-linear__indeterminate--active"
                                  >
                                    <div
                                      class="v-progress-linear__indeterminate long primary"
                                    />
                                    <div
                                      class="v-progress-linear__indeterminate short primary"
                                    />
                                  </div>
                                </transition-stub>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </v-col-stub>
        </v-row-stub>
      </div>
      <v-row-stub
        class="pt-4"
        dense="true"
        justify="end"
        tag="div"
      >
        <v-col-stub
          class="d-flex justify-center"
          cols="12"
          md="3"
          sm="6"
          tag="div"
        >
          <a
            block=""
            class="v-btn-stub"
            color="primary"
            data-copy-plans=""
            disabled="disabled"
          >
            <v-icon-stub
              left=""
            >
              M2,2H16V16H2V2M22,8V22H8V18H18V8H22M4,4V14H14V4H4Z
            </v-icon-stub>
            前月から予定をコピー
          </a>
        </v-col-stub>
        <v-col-stub
          class="d-flex justify-center mt-2 mt-sm-0"
          cols="12"
          md="3"
          sm="6"
          tag="div"
        >
          <a
            block=""
            class="v-btn-stub"
            color="accent"
            data-save=""
            disabled="disabled"
          >
            <v-icon-stub
              left=""
            >
              M14,13V17H10V13H7L12,8L17,13M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z
            </v-icon-stub>
            保存
          </a>
        </v-col-stub>
        <v-col-stub
          class="d-flex justify-center mt-2 mt-sm-0"
          cols="12"
          md="3"
          sm="6"
          tag="div"
        >
          <a
            class="flex-grow-1 flex-shrink-1 v-btn-stub"
            color="accent"
            data-remand=""
          >
            <v-icon-stub
              left=""
            >
              M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z
            </v-icon-stub>
            予実を作成中にする
          </a>
        </v-col-stub>
        <v-col-stub
          class="d-flex mt-2 mt-md-0"
          cols="12"
          md="3"
          ordermd="first"
          tag="div"
        >
          <a
            class="v-btn-stub"
            color="danger"
            data-delete-ltcs-provision-report-button=""
            text=""
          >
            <v-icon-stub
              left=""
            >
              M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z
            </v-icon-stub>
            削除
          </a>
        </v-col-stub>
      </v-row-stub>
    </v-container-stub>
    <div
      class="z-data-card-stub-slot-header"
    />
  </div>
  <z-ltcs-provision-report-entry-browsing-dialog-stub
    iseffectiveon="2021-02"
    officeid="10"
    width="75%"
  />
  <v-dialog-stub
    closedelay="0"
    contentclass=""
    data-date-confirm-dialog="download"
    opendelay="0"
    origin="center center"
    persistent="true"
    retainfocus="true"
    transition="dialog-transition"
    width="400"
  >
    <v-card-stub
      loaderheight="4"
      tag="div"
    >
      <!---->
      <v-card-text-stub
        tag="div"
      >
        <p
          class="message"
        >
          印字する作成日を選択してください
        </p>
        <div>
          <v-date-picker-stub
            dayformat="[Function]"
            eventcolor="warning"
            firstdayofweek="1"
            full-width=""
            fullwidth="true"
            headerdateformat="[Function]"
            locale="ja-JP"
            localefirstdayofyear="0"
            max="2028-05-17"
            min="1920-01-01"
            nexticon="$next"
            nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
            nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
            notitle="true"
            previcon="$prev"
            prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
            prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
            selecteditemstext="$vuetify.datePicker.itemsSelected"
            titledateformat="[Function]"
            type="date"
            width="290"
            yearformat="[Function]"
          />
          <div
            class="mt-1"
            data-error=""
            vid="date"
          >
            <input
              type="hidden"
            />
            <!---->
          </div>
          <div
            class="mt-4 pl-3"
          >
            <div
              class="v-input py-0 v-input--hide-details v-input--dense theme--light v-input--selection-controls v-input--checkbox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-input--selection-controls__input"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate v-icon--dense mdi mdi-checkbox-blank-outline theme--light"
                    />
                    <input
                      aria-checked="false"
                      role="checkbox"
                      type="checkbox"
                      value=""
                    />
                    <div
                      class="v-input--selection-controls__ripple"
                    />
                  </div>
                  <label
                    class="v-label theme--light"
                    style="left: 0px; position: relative;"
                  >
                    被保険者番号を伏せ字にする
                  </label>
                </div>
              </div>
            </div>
            <div
              class="v-input py-0 mt-0 v-input--hide-details v-input--dense theme--light v-input--selection-controls v-input--checkbox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-input--selection-controls__input"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate v-icon--dense mdi mdi-checkbox-blank-outline theme--light"
                    />
                    <input
                      aria-checked="false"
                      role="checkbox"
                      type="checkbox"
                      value=""
                    />
                    <div
                      class="v-input--selection-controls__ripple"
                    />
                  </div>
                  <label
                    class="v-label theme--light"
                    style="left: 0px; position: relative;"
                  >
                    被保険者氏名を伏せ字にする
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </v-card-text-stub>
      <v-card-actions-stub
        tag="div"
      >
        <v-spacer-stub
          tag="div"
        />
        <a
          class="v-btn-stub"
          color="grey"
          data-button-negative=""
          text=""
        >
          <span>
            キャンセル
          </span>
        </a>
        <a
          class="v-btn-stub"
          color="primary"
          data-button-positive=""
          text=""
          type="submit"
        >
          <span>
            ダウンロード
          </span>
        </a>
      </v-card-actions-stub>
    </v-card-stub>
  </v-dialog-stub>
  <v-dialog-stub
    closedelay="0"
    contentclass=""
    opendelay="0"
    origin="center center"
    persistent="true"
    retainfocus="true"
    transition="dialog-transition"
    width="400"
  >
    <v-card-stub
      loaderheight="4"
      tag="div"
    >
      <!---->
      <v-card-text-stub
        tag="div"
      >
        <p
          class="message"
        >
          算定情報が登録されていないため、予実を登録できません。

算定情報の一覧画面に遷移します。
        </p>
      </v-card-text-stub>
      <v-card-actions-stub
        tag="div"
      >
        <v-spacer-stub
          tag="div"
        />
        <!---->
        <a
          class="v-btn-stub"
          color="primary"
          data-button-positive=""
          text=""
          type="submit"
        >
          <span>
            OK
          </span>
        </a>
      </v-card-actions-stub>
    </v-card-stub>
  </v-dialog-stub>
  <z-progress-stub
    message="処理中です。しばらくお待ちください。"
    opacity="0.8"
    zindex="7"
  />
</div>
`;

exports[`pages/ltcs-provision-reports/_officeId/_userId/_providedIn/index.vue update calc specs button should update the additional table's information when it clicked 1`] = `
<div
  class="v-data-table v-data-table--dense theme--light additionTable"
  data-addition-table=""
>
  <div
    class="v-data-table__wrapper"
  >
    <table>
      <tbody>
        <tr>
          <th
            class="text-right text--secondary key"
          >
            特定事業所加算
          </th>
          <td
            class="value"
          >
            <span>
              特定事業所加算Ⅴ
            </span>
          </td>
        </tr>
        <tr>
          <th
            class="text-right text--secondary key"
          >
            処遇改善加算
          </th>
          <td
            class="value"
          >
            <span>
              処遇改善加算（Ⅴ）
            </span>
          </td>
        </tr>
        <tr>
          <th
            class="text-right text--secondary key"
          >
            特定処遇改善加算
          </th>
          <td
            class="value"
          >
            <span>
              特定処遇改善加算（Ⅱ）
            </span>
          </td>
        </tr>
        <tr>
          <th
            class="text-right text--secondary key"
          >
            ベースアップ等支援加算
          </th>
          <td
            class="value"
          >
            <span>
              介護職員等ベースアップ等支援加算
            </span>
          </td>
        </tr>
        <tr>
          <th
            class="text-right text--secondary key"
          >
            地域加算
          </th>
          <td
            class="value"
          >
            <span>
              中山間地域等における小規模事業所加算
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
